﻿drkns 08.12.2015 00:25:17 +0200 - build 4467

1. Рефакторинг.

2. Еще немного на тему 4461.

shmuel 07.12.2015 21:04:04 +0200 - build 4466

1. M#3129: Несколько строк склеивается в одну

drkns 07.12.2015 21:03:09 +0200 - build 4465

1. Уточнение 4461.

drkns 04.12.2015 00:24:07 +0200 - build 4464

1. Рефакторинг.

2. Warnings.

3. GCC build fix.

drkns 01.12.2015 20:24:11 +0200 - build 4463

1. Вернём workaround для бага в kernel32::GetFinalPathNameByHandleW, потерянный в 2155.

drkns 30.11.2015 22:18:30 +0200 - build 4462

1. Рефакторинг.

2. Ukrainian translation from Vlad Lozynskyi.

drkns 27.11.2015 13:40:00 +0200 - build 4461

1. 0003124: Не восстанавливает постоянные сетевые соединения при запуске от имени другого пользователя.

drkns 26.11.2015 08:49:29 +0200 - build 4460

1. Уточнение 4459.

drkns 23.11.2015 21:40:04 +0200 - build 4459

1. Рефакторинг.

drkns 21.11.2015 02:26:19 +0200 - build 4458

1. В некотрых случаях при выделении слов в редакторе кликами мыши могло получаться несколько выделенных блоков.

shmuel 17.11.2015 14:41:37 +0200 - build 4457

1. Функция FSF.FarInputRecordToName при некоторых значениях своего первого аргумента могла
   не возвращаться, покуда не поступит ввод от консоли.

drkns 15.11.2015 11:59:17 +0200 - build 4456

1. Продолжение 4455.

drkns 15.11.2015 01:37:43 +0200 - build 4455

1. Оказывается, Far уже можно полноценно собрать в clang. Немного связанной с этим реорганизации в препроцессорных макросах.

svs 07.11.2015 00:28:32 +0300 - build 4454

1. SQLite 3.9.2

drkns 01.11.2015 19:04:35 +0200 - build 4453

1. Рефакторинг, предупреждения VS15 и прочие мелочи.

drkns 01.11.2015 18:59:48 +0200 - build 4452

1. Задел на будущее: разломаем FindFiles на два отдельных класса: интерфейс и непосредственно поиск.

drkns 31.10.2015 13:07:10 +0200 - build 4451

1. 0003077: Exception при поиске в альтернативных потоках

shmuel 28.10.2015 19:12:06 +0200 - build 4450

1. Мелкий рефакторинг в макросистеме.
