@@ -1,4 +1,10 @@
-﻿drkns 08.12.2015 00:25:17 +0200 - build 4467
+﻿drkns 09.12.2015 20:28:43 +0200 - build 4468
+
+1. debug & gcc.
+
+2. syslog & gcc.
+
+drkns 08.12.2015 00:25:17 +0200 - build 4467
 
 1. Рефакторинг.
 
